[package]
name = "bing-image-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html_parser = "0.6.2"
structopt = "0.3.25"
bytes = "1.1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"
url = "2.2.2"
